Add caching configuration to production Dockerfile [SCI-8089]

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -3,10 +3,28 @@ MAINTAINER SciNote <info@scinote.net>
 
 ARG WKHTMLTOPDF_PACKAGE_URL=https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.buster_amd64.deb
 
-# additional dependecies
-# libreoffice for file preview generation
-RUN apt-get update -qq && \
-  apt-get install -y \
+RUN rm -f /etc/apt/apt.conf.d/docker-clean; echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
+RUN \
+  --mount=type=cache,target=/var/cache/apt,sharing=locked \
+  --mount=type=cache,target=/var/lib/apt,sharing=locked \
+  wget -q -O /tmp/wkhtmltox_amd64.deb $WKHTMLTOPDF_PACKAGE_URL && \
+  DEBIAN_FRONTEND=noninteractive \
+  apt-get update -qq && \
+  apt-get install -y --no-install-recommends \
+  fonts-droid-fallback \
+  fonts-noto-mono \
+  fonts-wqy-microhei \
+  fonts-wqy-zenhei \
+  /tmp/wkhtmltox_amd64.deb && \
+  rm /tmp/wkhtmltox_amd64.deb
+
+RUN \
+  --mount=type=cache,target=/var/cache/apt,sharing=locked \
+  --mount=type=cache,target=/var/lib/apt,sharing=locked \
+  touch /etc/build-${BUILD_TIMESTAMP} && \
+  DEBIAN_FRONTEND=noninteractive \
+  apt-get update -qq && \
+  apt-get install -y --no-install-recommends \
   libjemalloc2 \
   libssl-dev \
   nodejs \
@@ -19,28 +37,34 @@ RUN apt-get update -qq && \
   poppler-utils \
   librsvg2-2 \
   libvips42 \
-  sudo graphviz --no-install-recommends \
+  graphviz \
   libreoffice \
-  fonts-droid-fallback \
-  fonts-noto-mono \
-  fonts-wqy-microhei \
-  fonts-wqy-zenhei \
   libfile-mimeinfo-perl && \
-  wget -q -O /tmp/wkhtmltox_amd64.deb $WKHTMLTOPDF_PACKAGE_URL && \
-  apt-get install -y /tmp/wkhtmltox_amd64.deb && \
-  rm /tmp/wkhtmltox_amd64.deb && \
   npm install -g yarn && \
-  ln -s /usr/lib/x86_64-linux-gnu/libvips.so.42 /usr/lib/x86_64-linux-gnu/libvips.so && \
-  rm -rf /var/lib/apt/lists/*
+  ln -s /usr/lib/x86_64-linux-gnu/libvips.so.42 /usr/lib/x86_64-linux-gnu/libvips.so
 
-ENV RAILS_ENV production
-ENV BUNDLE_BUILD__SASSC=--disable-march-tune-native
+ARG BUILD_TIMESTAMP=1
+RUN \
+  --mount=type=cache,target=/var/cache/apt,sharing=locked \
+  --mount=type=cache,target=/var/lib/apt,sharing=locked \
+  touch /etc/build-${BUILD_TIMESTAMP} && \
+  DEBIAN_FRONTEND=noninteractive \
+  apt-get update -qq && \
+  apt-get upgrade -y && \
+  rm -rf /var/lib/apt/lists/*
 
 # install gems
 COPY Gemfile* /usr/src/bundle/
 COPY addons /usr/src/bundle/addons
+ENV RAILS_ENV=production
+ENV BUNDLE_BUILD__SASSC=--disable-march-tune-native
+ENV BUNDLE_CACHE_PATH=/usr/src/bundle/vendor/cache
 WORKDIR /usr/src/bundle
-RUN bundle install
+RUN \
+  --mount=type=cache,target=/usr/src/bundle/vendor/cache,sharing=locked \
+  bundle config set without 'development test' && \
+  bundle install --jobs `nproc` && \
+  bundle cache
 
 # create app directory
 ENV APP_HOME /usr/src/app
@@ -49,7 +73,9 @@ WORKDIR $APP_HOME
 COPY . .
 RUN rm -f $APP_HOME/config/application.yml $APP_HOME/production.env
 
-RUN DATABASE_URL=postgresql://postgres@db/scinote_production \
+RUN \
+  --mount=type=cache,target=/usr/local/share/.cache/yarn/v6,sharing=locked \
+  DATABASE_URL=postgresql://postgres@db/scinote_production \
   SECRET_KEY_BASE=dummy \
   DEFACE_ENABLED=true \
   bash -c "rake assets:precompile && rake deface:precompile"
